# npuzzle

./: CMakeLists.txt  README.md  author  b
doc/: structure.md
puzzles/: 10x10-1  13x13-1  20x20-1  3x3-1  3x3-2  3x3-3  3x3-uns-2  4x4-1  4x4-2  4x4-uns-1  4x4-uns-2  5x5-1  5x5-uns-1  5x5-uns-2  5x5-uns-3  6x6-1  6x6-uns-1  7x7-1
src/: main.cc
src/Algo/: MyPriorQueue.hh  NPuzzleSolver.cc  NPuzzleSolver.hh  State.cc  State.hh
src/Common/: common.hh
src/Log/: log.cc  log.hh
src/Parser/: Parser.cc  Parser.hh  untitled.cpp
src/UI/: UI.cc  UI.hh
